--- a/css/index.css
+++ b/css/index.css
@@ -169,8 +169,13 @@ p {
 }
 
 .nav a {
+  padding: 0 35px;
   text-decoration: none;
   color: black;
+}
+
+.header-img {
+  margin-bottom: 20px;
 }
 
 /*------------------------*/
