--- a/css/index.css
+++ b/css/index.css
@@ -286,8 +286,31 @@ p {
 }
 
 .about-content {
-  border: 1px solid red;
+  display: flex;
+  flex-flow: row wrap;
 }
+
+.about-content .about-box {
+  margin: 10px;
+  height: 450px;
+  width: 375px;
+  border-bottom: 1px dotted black;
+}
+
+.about-content .about-box img {
+  padding-bottom: 15px;
+}
+
+.about-content .about-box button {
+  margin: 30px 0 0 5px;
+  height: 35px;
+  width: 120px;
+  border-radius: 5px;
+  border: 2px solid black;
+  font-size: 14px;
+}
+
+/*------------------------*/
 
 footer {
   width: 100%;
