created contact page, linked all other pages together

--- a/css/index.css
+++ b/css/index.css
@@ -322,6 +322,10 @@ p {
 
 /*------------------------*/
 
+/* contact page */
+
+/*------------------------*/
+
 footer {
   width: 100%;
   background: black;
